kubernetes/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mrkt-api
  namespace: default
  labels:
    app: mrkt-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mrkt-api
  template:
    metadata:
      labels:
        app: mrkt-api
    spec:
      containers:
        - name: mrkt-api
          image: opeo/mrkt-api:latest
          ports:
            - containerPort: 12345
              name: http
