kubernetes/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mrkt-api
  labels:
    app: mrkt-api
spec:
  ports:
  - port: 12345
    name: web
  selector:
    # Change this selector to match your application's labels
    app: mrkt-api
  type: LoadBalancer
