kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - mrkt.opeonikute.dev
    secretName: mrkt-api-tls
  rules:
  - host: mrkt.opeonikute.dev
    http:
      paths:
      - backend:
          serviceName: mrkt-api
          servicePort: 12345
